KDE neon and ESP32 Bluetooth Classic Sniffer

--- a/UI/install.ui
+++ b/UI/install.ui
@@ -114,7 +114,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>55</y>
+      <y>80</y>
       <width>180</width>
       <height>25</height>
      </rect>
@@ -146,13 +146,29 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>105</y>
       <width>180</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
      <string>DragonOS Focal (beta)</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_kde_neon_5_25">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>55</y>
+      <width>180</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>KDE neon 5.25 (20.04)</string>
     </property>
    </widget>
   </widget>
