New maint-3.10 branch, Discord link, README images

--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -27050,6 +27050,7 @@ p, li { white-space: pre-wrap; }
     <addaction name="actionHelpSoftwareAndConflicts"/>
     <addaction name="actionHelpBuiltWith"/>
     <addaction name="menuGitHub"/>
+    <addaction name="actionDiscord"/>
     <addaction name="separator"/>
     <addaction name="actionHelpAbout"/>
    </widget>
@@ -28899,6 +28900,11 @@ p, li { white-space: pre-wrap; }
   <action name="actionIIO_Oscilloscope">
    <property name="text">
     <string>IIO Oscilloscope</string>
+   </property>
+  </action>
+  <action name="actionDiscord">
+   <property name="text">
+    <string>Discord</string>
    </property>
   </action>
  </widget>
