Adding bladeRF 2.0 support and applying bladeRF updates

--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -1637,6 +1637,11 @@ QTabBar::tab:!selected {
                 </item>
                 <item>
                  <property name="text">
+                  <string>wideband_bladerf2.py</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
                   <string>Simulator</string>
                  </property>
                 </item>
@@ -6190,6 +6195,11 @@ p, li { white-space: pre-wrap; }
                 <item>
                  <property name="text">
                   <string>USRP N2xx</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>bladeRF 2.0</string>
                  </property>
                 </item>
                </widget>
@@ -13688,6 +13698,11 @@ p, li { white-space: pre-wrap; }
               <string>USRP N2xx</string>
              </property>
             </item>
+            <item>
+             <property name="text">
+              <string>bladeRF 2.0</string>
+             </property>
+            </item>
            </widget>
           </widget>
           <widget class="QWidget" name="tab_iq_data">
@@ -15899,6 +15914,7 @@ p, li { white-space: pre-wrap; }
                <widget class="QWidget" name="page_PlutoSDR"/>
                <widget class="QWidget" name="page_USRP2"/>
                <widget class="QWidget" name="page_USRP_N2xx"/>
+               <widget class="QWidget" name="page_bladeRF2"/>
               </widget>
              </widget>
              <widget class="QLabel" name="label_38">
@@ -25732,6 +25748,21 @@ Flow Graphs</string>
                   <string>PlutoSDR</string>
                  </property>
                 </item>
+                <item>
+                 <property name="text">
+                  <string>USRP2</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>USRP N2xx</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>bladeRF 2.0</string>
+                 </property>
+                </item>
                </widget>
                <widget class="QComboBox" name="comboBox_library_pd_modulation_types">
                 <property name="geometry">
@@ -26319,6 +26350,11 @@ p, li { white-space: pre-wrap; }
                 <item>
                  <property name="text">
                   <string>USRP N2xx</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>bladeRF 2.0</string>
                  </property>
                 </item>
                </widget>
