Disabling IIO-Oscilloscope for Python2 branch

--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -28976,6 +28976,9 @@ p, li { white-space: pre-wrap; }
    </property>
   </action>
   <action name="actionIIO_Oscilloscope">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>IIO Oscilloscope</string>
    </property>
