RTL fixes and more lessons

--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -27777,6 +27777,8 @@ p, li { white-space: pre-wrap; }
     <addaction name="actionPySDR_org"/>
     <addaction name="actionSDR_with_HackRF"/>
     <addaction name="actionGNU_Radio_Tutorials"/>
+    <addaction name="actionProgramming_SDRs_with_GNU_Radio"/>
+    <addaction name="actionLearn_SDR"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
@@ -29084,6 +29086,16 @@ p, li { white-space: pre-wrap; }
   <action name="actionGNU_Radio_Tutorials">
    <property name="text">
     <string>GNU Radio Tutorials</string>
+   </property>
+  </action>
+  <action name="actionProgramming_SDRs_with_GNU_Radio">
+   <property name="text">
+    <string>Programming SDRs with GNU Radio</string>
+   </property>
+  </action>
+  <action name="actionLearn_SDR">
+   <property name="text">
+    <string>Learn SDR</string>
    </property>
   </action>
  </widget>
