Program size estimates for install

--- a/UI/install.ui
+++ b/UI/install.ui
@@ -130,7 +130,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>105</y>
       <width>180</width>
       <height>25</height>
      </rect>
@@ -146,13 +146,29 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>55</y>
+      <y>80</y>
       <width>180</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
      <string>KDE neon 5.25 (20.04)</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_ubuntu20_04_5">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>55</y>
+      <width>150</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Ubuntu 20.04.5</string>
     </property>
    </widget>
   </widget>
